fix: prevent search jump (#1348)
* fix: prevent search jump

* fix: remove cads-px

* fix: why am I using calc?

* docs: update changelog

* fix: use vars for border width

* test: add vrt

--- a/scss/6-components/_header.scss
+++ b/scss/6-components/_header.scss
@@ -9,8 +9,9 @@
 
   &__hyperlink {
     display: inline-block;
-    margin-bottom: $cads-spacing-2;
+    margin-bottom: cads-rem-to-px($cads-spacing-2) - $cads-border-width-medium;
     color: $cads-header__link-colour;
+    border-bottom: $cads-border-width-medium solid transparent;
 
     &:hover {
       color: $cads-header__link-hover-colour;
